--- a/index.html
+++ b/index.html
@@ -1,1 +1,69 @@
-<h1>Hello! ;)</h1>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Curriculum Vitae</title>
+</head>
+<body>
+
+  <header>
+        <h1>Bienvenue sur mon CV</h1>
+
+        <p>Amara Chiraz 31ans</p>
+        <p>13 Bis rue Gosset</p>
+        <p>93800 Epinay sur Seine</p>
+        <p>Amara.chiraz@live.fr</p>
+        <p>06.22.83.11.68</p>
+        <p>Permis B</p>
+    </header>
+
+    <main>
+        <h2>EXPERIENCES PROFESSIONNELLES</h2>
+           <ul>
+            <li>2020-2023: Enseignante de la conduite en auto-entrepreneur - Paris </li>
+
+            <li>2016-2019: Enseignante de la conduite - Paris
+                Ecoute, pédagogie, adaptation, patience.</li>
+
+            <li>2013-2016: Animatrice en centre aéré - La Courneuve.
+                Gestion des effectifs, des informations et des plannings, animation, préparations et mise en place d'activités.</li>
+
+            <li>2013-2016 : Guichetiere à la Poste - Dugny.
+                Accueil, vente conseille, opérations financières et de gestions.</li>
+
+            <li>2013-2014: Animatrice périscolaires - Aubervilliers.
+                Animation, préparations et mise en place d'activités.</li>
+
+            <li>2013 : Agent d'accueil à la Maison du Soleil - Aubervilliers.
+                Accueil, réception et émission des appels téléphoniques, transferts d'appels, saisies.</li>
+
+           </ul>
+
+
+        <h2>FORMATIONS</h2>
+            <ul> 
+             <li>2015-2016: BEPECASER - REMC - CER GARGAN - Noisy le sec.</li>
+
+             <li>2011-2013: BTS Management des Unités Commerciales - Paris 19.</li>
+
+             <li>2010-2011 : Baccalauréat Sciences et Technologies de Gestion - Stains.</li>
+
+           </ul>
+
+
+        <h2>CONNAISSANCES</h2>
+
+            <ul>
+                <li>Linguistiques : Anglais, Allemand, Arabe.</li>
+
+                <li>Informatiques : Pack Microsoft Office (Word, Powerpoint, Accès), Sphinx (création de questionnaires), Gant Project (création de plannings).</li>
+            </ul>
+            
+    </main>
+
+    <footer></footer>    
+</html>
+
+
