--- a/index.html
+++ b/index.html
@@ -21,22 +21,22 @@
     <main>
         <h2>EXPERIENCES PROFESSIONNELLES</h2>
            <ul>
-            <li>2020-2023: Enseignante de la conduite en auto-entrepreneur - Paris </li>
+            <li><strong>2020-2023:</strong>Enseignante de la conduite en auto-entrepreneur - Paris </li>
 
-            <li>2016-2019: Enseignante de la conduite - Paris
-                Ecoute, pédagogie, adaptation, patience.</li>
+            <li><strong>-2019: </strong> Enseignante de la conduite - Paris
+                <em>Ecoute, pédagogie, adaptation, patience.</em></li>
 
-            <li>2013-2016: Animatrice en centre aéré - La Courneuve.
-                Gestion des effectifs, des informations et des plannings, animation, préparations et mise en place d'activités.</li>
+            <li><strong>-2016:</strong>Animatrice en centre aéré - La Courneuve.
+                <em> Gestion des effectifs, des informations et des plannings, animation, préparations et mise en place d'activités.</em></li>
 
-            <li>2013-2016 : Guichetiere à la Poste - Dugny.
-                Accueil, vente conseille, opérations financières et de gestions.</li>
+            <li><strong>-2016:</strong>Guichetiere à la Poste - Dugny.
+              <em> Accueil, vente conseille, opérations financières et de gestions.</em></li>
 
-            <li>2013-2014: Animatrice périscolaires - Aubervilliers.
-                Animation, préparations et mise en place d'activités.</li>
+            <li><strong>-2014:</strong>Animatrice périscolaires - Aubervilliers.
+              <em>Animation, préparations et mise en place d'activités.</em></li>
 
-            <li>2013 : Agent d'accueil à la Maison du Soleil - Aubervilliers.
-                Accueil, réception et émission des appels téléphoniques, transferts d'appels, saisies.</li>
+            <li> <strong> 2013:</strong>Agent d'accueil à la Maison du Soleil - Aubervilliers.
+              <em>Accueil, réception et émission des appels téléphoniques, transferts d'appels, saisies.</em></li>
 
            </ul>
 
