--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <header>
         <h1>Bienvenue sur mon CV</h1>
-
+/*en faire une liste
         <p>Amara Chiraz 31ans</p>
         <p>13 Bis rue Gosset</p>
         <p>93800 Epinay sur Seine</p>
